--- a/index.html
+++ b/index.html
@@ -236,15 +236,15 @@
         <h2>Новости</h2>
         <div class="news-container">
             <article>
-                <h3>8.03.2025 - Базовые учения</h3>
+                <h3>14.03.2025(21.00) - базовые учения</h3>
                 <p>Отработка основных тактик и стратегий.</p>
             </article>
             <article>
-                <h3>9.03.2025 - Полные учения</h3>
+                <h3>15.03.2025(21.00) - полные учения</h3>
                 <p>Полный боевой сценарий с координацией команды.</p>
             </article>
             <article>
-                <h3>15.03.2025 - СВО</h3>
+                <h3>21.03.2025(21.00) - СВО</h3>
                 <p>Специальная военная операция с максимальным уровнем сложности.</p>
             </article>
         </div>
